--- a/src/main/resources/com/gthm/m3ueditor/layouts/hello-view.fxml
+++ b/src/main/resources/com/gthm/m3ueditor/layouts/hello-view.fxml
@@ -8,7 +8,7 @@
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1"
       xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.gthm.m3ueditor.HelloController">
+      fx:controller="com.gthm.m3ueditor.controllers.HelloController">
 
     <children>
         <MenuBar VBox.vgrow="NEVER">
